--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
   "name": "starkhacks-website",
   "compatibility_date": "2026-01-27",
-  "main": "src/index.ts",
+  "main": "src/routes/+page.svelte",
 }
